# halo_web

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/code_sample/: Quijote_sample.ipynb  TNG100_sample.ipynb  cals_a50.py  creat_mock.py  ft.py  halo_web_cross.py  process_Quijote.py  process_simulatioin.py  theory1.ipynb  theory2.ipynb  tidal_field_calc.py  tng100-1-dark.json
docs/code_sample/data/: halo.txt  tree_extended.hdf5
docs/code_sample/elucid_theory/: 2pccf.ipynb  sample_gen_loc.ipynb  sample_gen_ser.ipynb
docs/code_sample/theory/: 2pccf.ipynb  sample_check.ipynb  sample_gen_loc.ipynb  sample_gen_ser.ipynb
docs/code_sample/tng100_theory/: 2pccf.ipynb  sample_check.ipynb  sample_gen_loc.ipynb  sample_gen_ser.ipynb
src/halo_assembly_bias/: __init__.py  ab_match.py  halo.py  halo_age.py  process_data.py
src/halo_assembly_bias/samples/: __init__.py  field.py
src/halo_assembly_bias/statistics/: cosmic_web.py
src/halo_web.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
