[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "halo_web"
version = "0.0.1"
authors = [
  { name="Hongfei Yu", email="yuhongfei@mail.ustc.edu.cn" }
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyhipp>=0.3.5", "pyhipp-sims", "flake8", "pytest>=7.0.0", "elucid"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
